--- a/v2.md
+++ b/v2.md
@@ -1,8 +1,9 @@
-# Command Processor v2
+# Command Processor v2 - Echo Command
 
 Write a console program that takes in a line of command each time and print the corresponding output, looping until the user quits. If the user enters an invalid command, print help text.
 
 **Commands to support**
+
 - ping
 - say
 - quit
