--- a/v3.md
+++ b/v3.md
@@ -32,7 +32,7 @@ Read the command in this format:
 
 `subtract <decimal1> <decimal2>`
 
-Then output the difference between the two numbers.
+Then output the subtraction result of the two numbers.
 
 ## `quit`
 
@@ -55,8 +55,8 @@ add 1 2
 3
 add 1.23 1.11
 2.34
-subtract 2 1
-1
+subtract 1 2
+-1
 subtract 2.34 1.11
 1.23
 abc
