--- a/v6.md
+++ b/v6.md
@@ -1,4 +1,4 @@
-# Command Processor v5 - Formatting Improvements
+# Command Processor v6 - Help Command
 
 Write a console program that takes in a line of command each time and print the corresponding output, looping until the user quits.
 
@@ -22,11 +22,14 @@ When prompting for user input, print `>` followed by a space for indication. Aft
 - say
 - add
 - subtract
+- help
 - quit
 
 ## `ping`
 
 Reply with `pong`.
+
+Command-specific help text: `Usage: ping`
 
 ### Example
 
@@ -129,9 +132,50 @@ Usage: subtract <decimal1> <decimal2>
 
 ```
 
+## `help`
+
+If a command name is supplied as optional parameter:
+
+Print the corresponding command-specific help text.
+
+### Example
+
+```
+> help ping
+Usage: ping
+
+```
+
+```
+> help add
+Usage: add <decimal1> <decimal2>
+
+```
+
+If no parameters are supplied:
+
+Print a list of available commands in alphabetical order.
+
+### Example
+
+```
+> help
+add
+help
+ping
+quit
+say
+subtract
+
+```
+
+Command-specific help text: `Usage: help [<command>]`
+
 ## `quit`
 
 Exit the program.
+
+Command-specific help text: `Usage: quit`
 
 ## Invalid command
 
