--- a/v4.md
+++ b/v4.md
@@ -1,6 +1,10 @@
 # Command Processor v4 - Error Handling
 
-Write a console program that takes in a line of command each time and print the corresponding output, looping until the user quits. If the user enters an invalid command, print help text. If the user enters invalid parameters, output what went wrong, then print help text specific to the command issued.
+Write a console program that takes in a line of command each time and print the corresponding output, looping until the user quits.
+
+If the user enters an invalid command, print help text.
+
+If the user enters invalid parameters, output what went wrong, then print help text specific to the command issued. Note that if two or more specified error messages apply to one input, any one of the applicable error messages should be printed.
 
 **Commands to support**
 
