Add help examples

--- a/v6.md
+++ b/v6.md
@@ -219,6 +219,17 @@ Usage: add <decimal1> <decimal2>
 > abc
 Command not recognized.
 
+> help add
+Usage: add <decimal1> <decimal2>
+
+> help
+add
+help
+ping
+quit
+say
+subtract
+
 > quit
 <program terminated>
 ```
