Explain "sub-command"

--- a/v7.md
+++ b/v7.md
@@ -135,14 +135,23 @@ Usage: subtract <decimal1> <decimal2>
 
 ## `blacklist`
 
-This is a command with multiple sub-commands. If the user input matches a sub-command, execute that sub-command and report errors specific to that sub-command. Otherwise, list the command-specific help text for all sub-commands:
+This is a command with multiple sub-commands. The string after the first space and before the second space in the input represents the sub-command name. If the user input matches a sub-command, execute that sub-command and report errors specific to that sub-command. Otherwise, list the command-specific help text for all sub-commands in alphabetical order:
 
 ```
 > blacklist
 Usage: blacklist add <name>
-Usage: blacklist remove <name>
-Usage: blacklist list
 Usage: blacklist clear
+Usage: blacklist list
+Usage: blacklist remove <name>
+
+```
+
+```
+> blacklist help
+Usage: blacklist add <name>
+Usage: blacklist clear
+Usage: blacklist list
+Usage: blacklist remove <name>
 
 ```
 
