Small point to note in v7

--- a/v7.md
+++ b/v7.md
@@ -207,7 +207,7 @@ Read the command in this format:
 
 `<name>` must consist of alphanumeric characters or underscore only.
 
-Check if the provided name exist in the list. If yes, remove it and output `<name> removed from blacklist.` Otherwise, output `<name> is not in the blacklist.`
+Check if the provided name exist in the list. If yes, remove it and output `<name> removed from blacklist.` Otherwise, output `<name> is not in the blacklist.` Note that in both cases, the command is considered to have executed successfully, thus the command-specific help text need not be printed.
 
 - If nothing is provided after `blacklist remove`, print `No name provided.`
 - If the name contains invalid characters, print `Invalid name.`
