Add combined example in v7; rename combined example in all versions

--- a/v6.md
+++ b/v6.md
@@ -181,7 +181,7 @@ Command-specific help text: `Usage: quit`
 
 Print help text: `Command not recognized.`
 
-## Example
+### Combined Example
 
 ```
 Command Processor
