--- a/v7.md
+++ b/v7.md
@@ -335,7 +335,7 @@ Command-specific help text: `Usage: quit`
 
 Print help text: `Command not recognized.`
 
-## Example
+## Combined Example
 
 ```
 Command Processor
@@ -369,6 +369,32 @@ Usage: add <decimal1> <decimal2>
 
 > subtract 2.34 1.11
 1.23
+
+> blacklist add player
+player added to blacklist.
+
+> blacklist remove player
+player removed from blacklist.
+
+> blacklist add player 1
+Invalid name.
+Usage: blacklist add <name>
+
+> blacklist add player1
+player1 added to blacklist.
+
+> blacklist add player2
+player2 added to blacklist.
+
+> blacklist list
+player1
+player2
+
+> blacklist clear
+Blacklist cleared.
+
+> blacklist remove player1
+player1 is not in the blacklist.
 
 > abc
 Command not recognized.
