Add instructions on help command, more general examples

--- a/v9.md
+++ b/v9.md
@@ -456,9 +456,9 @@ whitelist cleared.
 
 > Alias: `man`
 
-If a command name is supplied as optional parameter:
+**If a command name is supplied as optional parameter:**
 
-Print the corresponding command-specific help text.
+Print the corresponding command-specific help text. Note that if a command alias is supplied, the corresponding command should be inferred and its command-specific help text should be printed.
 
 Command-specific help text: `Usage: help [<command>]`
 
@@ -476,7 +476,25 @@ Usage: add <decimal1> <decimal2>
 
 ```
 
-If no parameters are supplied:
+```
+> help help
+Usage: help [<command>]
+
+```
+
+```
+> help man
+Usage: help [<command>]
+
+```
+
+```
+> man man
+Usage: help [<command>]
+
+```
+
+**If no parameters are supplied:**
 
 Print a list of available commands in alphabetical order.
 
@@ -556,7 +574,7 @@ player1 added to blacklist.
 > blacklist add player2
 player2 added to blacklist.
 
-> blacklist list
+> allowlist list
 player1
 player2
 
@@ -582,7 +600,7 @@ player1 added to whitelist.
 > whitelist add player2
 player2 added to whitelist.
 
-> whitelist list
+> allowlist list
 player1
 player2
 
@@ -598,6 +616,9 @@ Command not recognized.
 > help add
 Usage: add <decimal1> <decimal2>
 
+> man plus
+Usage: add <decimal1> <decimal2>
+
 > help
 add
 help
@@ -606,6 +627,14 @@ quit
 say
 subtract
 
-> quit
+> man
+add
+help
+ping
+quit
+say
+subtract
+
+> exit
 <program terminated>
 ```
