--- a/v9.md
+++ b/v9.md
@@ -574,7 +574,7 @@ player1 added to blacklist.
 > blacklist add player2
 player2 added to blacklist.
 
-> allowlist list
+> denylist list
 player1
 player2
 
